# text_diff

./: .gitignore  clean.html  clean.html.md  core.html  core.html.md  diff.html  diff.html.md  group.html  group.html.md  index.html  index.html.md  llm.html  llm.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml
nbs/: 00_core.ipynb  01_diff.ipynb  02_clean.ipynb  03_group.ipynb  04_llm.ipynb  index.ipynb  nbdev.yml  sidebar.yml
text_diff/: _modidx.py  clean.py  core.py  diff.py  group.py  llm.py
